<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/photo_gallery"
    android:layout_height="fill_parent"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

    </RelativeLayout>
    <WebView
        android:id="@+id/webView1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/aboutusimg"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/aboutusimg"

        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_place1"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/view1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_place"
        android:textColor="#000000"
        android:id="@+id/textView"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:text="@string/txt_month"
        android:textColor="#ea5324"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignStart="@+id/imageView1" />


</RelativeLayout>